--- a/manifest.json
+++ b/manifest.json
@@ -2,16 +2,8 @@
   "short_name": "Paul Mayer",
   "name": "Homepage and Blog Paul Mayer",
   "icons": [
-    {
-      "src": "logo.svg",
-      "sizes": "512x512 192x192 64x64 32x32 24x24 16x16",
-      "type": "image/svg+xml"
-    },
-    {
-      "src": "logo556.png",
-      "sizes": "512x512 192x192 64x64 32x32 24x24 16x16",
-      "type": "image/png"
-    }
+    { "src": "/img/icon-192.png", "type": "image/png", "sizes": "192x192" },
+    { "src": "/img/icon-512.png", "type": "image/png", "sizes": "512x512" }
   ],
   "start_url": ".",
   "display": "standalone",
