--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "@types/node": "18.11.17",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.10",
-    "gh-pages": "4.0.0",
+    "gh-pages": "^4.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-router-dom": "6.6.1",
