--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "website",
   "version": "0.1.0",
   "private": true,
-  "homepage": "http://www.paluthebear.de",
+  "homepage": "http://www.paul-myr.de/",
   "dependencies": {
     "@testing-library/jest-dom": "5.16.4",
     "@testing-library/react": "13.4.0",
@@ -21,9 +21,9 @@
   },
   "scripts": {
     "predeploy": "npm run build",
+    "build": "./scripts/compile_posts",
     "deploy": "gh-pages -d build",
     "start": "react-scripts start",
-    "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
